<resources>
    <string name="app_name">CharTracker</string>
    <string name="SignIn">Sign In</string>
    <string name="emailHint">Enter Email</string>
    <string name="passwordHint">Enter Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="stories">Stories</string>
    <string name="add_story">Add Story</string>
    <string name="title">Title:</string>
    <string name="title_hint">Enter title</string>
    <string name="genre">Genre:</string>
    <string name="genre_hint">Enter genre</string>
    <string name="type">Type:</string>
    <string name="type_hint">Enter type (e.g. book)</string>
    <string name="author">Author:</string>
    <string name="author_hint">Enter author</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="add_story_desc">Add a new story</string>
    <string name="characters">Characters</string>
    <string name="add_character_desc">Add a character</string>
    <string name="edit_story">Edit story</string>
    <string name="delete">Delete</string>
    <string name="add_character">Add Character</string>
    <string name="name">Name:</string>
    <string name="name_hint">Enter name</string>
    <string name="aliases">Aliases:</string>
    <string name="aliases_hint">Enter aliases</string>
    <string name="titles">Titles:</string>
    <string name="titles_hint">Enter titles</string>
    <string name="age">Age:</string>
    <string name="age_hint">Enter age</string>
...
    <string name="faction_hint">Enter faction</string>
    <string name="allies">Allies:</string>
    <string name="enemies">Enemies:</string>
    <string name="neutral">Neutral:</string>
    <string name="character_details">Character Details</string>
    <string name="edit">Edit</string>
    <string name="edit_character">Edit Character</string>
    <string name="password_confirm">Confirm Password:</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="sign_in_credentials">Sign In With Saved Credentials</string>
    <string name="story_image_desc">Image representing the story</string>
    <string name="overflow_menu">Overflow menu</string>
    <string name="email_verification_instructions">A verification email was sent to the below email. Please verify to continue.</string>
    <string name="resend">Resend</string>
    <string name="go_to_sign_in">Continue to Sign In</string>
...
    <string name="remove_currrent_image">Remove current image</string>
    <string name="remove_selected_image">Remove selected image</string>
    <string name="character_image_desc">Image representing the character</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="password_confirm_hint">Confirm New Password</string>
    <string name="scroll_to_top">scroll to the top</string>
    <string name="submit_char">Submit character</string>
    <string name="submit_story">Submit story</string>
    <string name="entity_image">Entity image</string>
    <string name="up_button">Up button</string>
    <string name="invalid_email_password">Invalid email or password!</string>
    <string name="password_reset_email_sent">Password reset email was sent to the email if it matches a user. Please wait a moment for it to arrive.</string>
    <string name="malformed_email_message">Malformed email</string>
    <string name="user_collision_message">User with this email already exists! Please login or use a different email.</string>
    <string name="fail_user_reload_message">Error with account!</string>
    <string name="email_sent">Email sent!</string>
...
