...
        floatingActionButton = {
            FloatingActionButton(onClick = { navToAddStory() }) {
                Icon(Icons.Filled.Add, stringResource(id = R.string.add_story_desc))
            }
        },
        modifier = Modifier
            .semantics { contentDescription = "Stories Screen" }
    ) { paddingValue ->
        Box(modifier = Modifier
            .padding(paddingValue)
            .pullRefresh(pullRefreshState)
        ){
            EntityHolderList(
...
@Preview(
    uiMode = Configuration.UI_MODE_NIGHT_NO,
    name = "Regular Light Mode")
@Composable
fun PreviewStoriesScreen(){
    val stories = listOf(
        StoryEntity(name = "Lord of the Rings"),
        StoryEntity(name = "Ender's Game"),
        StoryEntity(name = "Batman"),
        StoryEntity(name = "Game of Thrones"),
        StoryEntity(name = "The Chronicles of Narnia"),
        StoryEntity(name = "The Cthulhu Mythos"),
        StoryEntity(name = "Really Really Really Really Long Ahh Title Just to see how it looks"))
...
