...
    name = "Dark Mode")
@Preview(
    uiMode = Configuration.UI_MODE_NIGHT_NO,
    name = "Light Mode")
@Composable
fun PreviewChipGroupRow(){
    val characters = listOf("Aragorn", "Gandalf", "Merry", "Pippin", "Sam", "Frodo", "Sauron", "Tom Bombadil", "Borimir", "Farimir")
    CharTrackerTheme {
        Surface {
            ChipGroupRow(
                header = "Allies:",
                contentsList = characters,
                selectedList = listOf(),
...
